applications/corre-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corre-api-ingress
  namespace: corre-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "corre-api.app.purplebit.com.br"
    secretName: corre-api-tls
  rules:
  - host: corre-api.app.purplebit.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: corre-api
            port:
              number: 80
